# mailing_list_service_project

./: .env.sample  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_remove_mailing_is_active_alter_mailing_message_and_more.py  0004_alter_mailing_end_sending_and_more.py
mailing/templates/mailing/: basic_design.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_send.html  mailing_stop.html  mailingattempt_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipientmailing_confirm_delete.html  recipientmailing_detail.html  recipientmailing_form.html  recipientmailing_list.html
mailing/templates/mailing/includes/: contacts.html  header_menu.html
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_token.py  0003_alter_user_phone_number.py
users/templates/users/: email_confirmation.html  login.html  password-confirmation.html  password_recovery.html  register.html  user_detail.html  user_list.html
